<resources>
    <string name="app_name">Navigation Bar</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_market">Market</string>
    <string name="nav_clubs">Clubs</string>
    <string name="nav_messages">Messages</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
