<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navHome"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navClubs"
        android:icon="@drawable/ic_group_work_black_24dp"
        android:title="@string/nav_clubs" />
    <item
        android:id="@+id/navMarket"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/nav_market" />
    <item
        android:id="@+id/navMessages"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/nav_messages" />
    <item
        android:id="@+id/navProfile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/nav_profile" />
</menu>